[package]
name = "detective"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
protobuf = "3.2.0"
common = { path = "../common" }
streamdal-detective = "0.0.27"
streamdal-transform = "0.0.7"
streamdal-protos = "0.0.115"
sha256 = "=1.1.4"

[profile.release]
lto = true
